use pivotal && cloudfoundry for hosting

--- a/webapp/src/main/resources/templates/index.html
+++ b/webapp/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
 </head>
 <body>
-<h1>Welcome</h1>
+<h1>Welcome flo 222</h1>
 <h2 th:utext="${message}">..!..</h2>
 
 <!--
