--- a/webapp/src/main/resources/templates/tables.html
+++ b/webapp/src/main/resources/templates/tables.html
@@ -38,14 +38,21 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                     <tr>
-                                        <th>Rendering engine</th>
-                                        <th>Browser</th>
-                                        <th>Platform(s)</th>
-                                        <th>Engine version</th>
-                                        <th>CSS grade</th>
+                                        <th>Title</th>
+                                        <th>Author</th>
+                                        <th>Language</th>
+                                        <th>Loan start date</th>
+                                        <th>Loan end date</th>
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <tr class="odd gradeX"
+                                        th:each="student, iStat : ${students}"
+                                        th:style="${iStat.odd}? 'font-weight: bold;'"
+                                        th:alt-title="${iStat.even}? 'even' : 'odd'">
+                                        <td th:text="${student.id}" />
+                                        <td th:text="${student.name}" />
+                                    </tr>
                                     <tr class="odd gradeX">
                                         <td>Trident</td>
                                         <td>Internet Explorer 4.0</td>
