create DateUtils class && generate array of books with a search feature

--- a/webapp/src/main/resources/templates/dashboard.html
+++ b/webapp/src/main/resources/templates/dashboard.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!--/*@thymesVar id="appName" type="String"*/-->
-    <title th:text="${appName}"></title>
+    <title th:text="${'Dashboard - ' + appName}"></title>
 </head>
 <header lang="en" th:replace="fragments/header :: header">
 </header>
