--- a/webapp/src/main/resources/templates/tables.html
+++ b/webapp/src/main/resources/templates/tables.html
@@ -35,11 +35,12 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                     <tr>
+                                        <th>Identifiant</th>
                                         <th>Title</th>
                                         <th>Author</th>
                                         <th>Language</th>
-                                        <th>Loan start date</th>
-                                        <th>Loan end date</th>
+                                        <th>State</th>
+                                        <th>Obtaining date</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -47,11 +48,12 @@
                                     <tr class="odd gradeX"
                                         th:each="book, iStat : ${books.getBook()}"
                                         th:alt-title="${iStat.even}? 'even' : 'odd'">
+                                        <td th:text="${book.getId()}"></td>
                                         <td th:text="${book.getTitle()}"></td>
                                         <td th:text="${book.getAuthor()}"></td>
                                         <td th:text="${book.getLanguages()}"></td>
-                                        <td th:text="${book.getLoanStartDate()}"></td>
-                                        <td th:text="${book.getLoanEndDate()}"></td>
+                                        <td th:text="${book.getState()}"></td>
+                                        <td th:text="${book.getObtainingDate()}"></td>
                                     </tr>
                                 </tbody>
                             </table>
