--- a/webapp/src/main/resources/templates/fragments/header.html
+++ b/webapp/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="header">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/vendor/metisMenu/metisMenu.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/dist/css/sb-admin-2.css}"/>
