--- a/webapp/src/main/resources/templates/login.html
+++ b/webapp/src/main/resources/templates/login.html
@@ -21,6 +21,12 @@
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
                     <div class="panel-body">
+                        <div th:if="${param.error}">
+                            Invalid username and password.
+                        </div>
+                        <div th:if="${param.logout}">
+                            You have been logged out.
+                        </div>
                         <form th:action="@{/login}" method="post">
                             <fieldset>
                                 <div class="form-group">
