user can get his books

--- a/webapp/src/main/resources/templates/fragments/nav.html
+++ b/webapp/src/main/resources/templates/fragments/nav.html
@@ -56,7 +56,7 @@
                 </li>
                 </li>
                 <li>
-                    <a th:href="@{/loans}"><i class="fa fa-tasks fa-fw"></i> Loans</a>
+                    <a th:href="@{/loans}"><i class="fa fa-tasks fa-fw"></i> My Loans</a>
                 </li>
             </ul>
         </div>
