--- a/webapp/src/main/resources/templates/auth/loans.html
+++ b/webapp/src/main/resources/templates/auth/loans.html
@@ -19,7 +19,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Books </h1>
+                <h1 class="page-header">My loans </h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
