--- a/webapp/src/main/resources/templates/tables.html
+++ b/webapp/src/main/resources/templates/tables.html
@@ -40,7 +40,7 @@
                                         <th>Author</th>
                                         <th>Language</th>
                                         <th>State</th>
-                                        <th>Obtaining date</th>
+                                        <th>Borrowed until</th>
                                         <th>Number of copies</th>
                                         <th>Borrow</th>
                                     </tr>
