--- a/webapp/src/main/resources/templates/tables.html
+++ b/webapp/src/main/resources/templates/tables.html
@@ -39,8 +39,6 @@
                                         <th>Title</th>
                                         <th>Author</th>
                                         <th>Language</th>
-                                        <th>State</th>
-                                        <th>Borrowed until</th>
                                         <th>Number of copies</th>
                                         <th>Borrow</th>
                                     </tr>
@@ -56,8 +54,6 @@
                                         <td th:text="${book.getTitle()}"></td>
                                         <td th:text="${book.getAuthor()}"></td>
                                         <td th:text="${book.getLanguages()}"></td>
-                                        <td th:text="${book.getState()}"></td>
-                                        <td th:text="|${book.getObtainingDate().getDay()}/${book.getObtainingDate().getMonth()}/${book.getObtainingDate().getYear()}|"></td>
                                         <td th:text="${book.getNumber()}"></td>
                                         <div>
                                             <div th:if="${connected == null}">
@@ -69,14 +65,14 @@
                                             <div th:unless="${connected == null}">
                                                 <div th:if="${bookNames != null and #lists.contains(bookNames, book.title)}">
                                                     <th>
-                                                        <button class="btn btn-warning" type="submit" disabled>Already taken</button>
+                                                        <button class="btn btn-default" type="submit" disabled>Already taken</button>
                                                     </th>
                                                 </div>
                                                 <div th:unless="${bookNames != null and #lists.contains(bookNames, book.title)}">
-                                                    <th th:if="${book.getNumber() == 0 or book.getState().equals('borrowed')}">
-                                                        <button class="btn btn-danger" type="submit" disabled>Not available</button>
+                                                    <th th:if="${book.getNumber() == 0}">
+                                                        <button class="btn btn-default" type="submit" disabled>Not available</button>
                                                     </th>
-                                                    <th th:unless="${book.getNumber() == 0 or book.getState().equals('borrowed')}">
+                                                    <th th:unless="${book.getNumber() == 0}">
                                                         <form th:action="@{/reserved-book}" method="post">
                                                             <input type="hidden" name="id" th:value="${book.getId()}" />
                                                             <input type="hidden" name="title" th:value="${book.getTitle()}" />
