batch email use webservice

--- a/webapp/src/main/resources/templates/auth/loans.html
+++ b/webapp/src/main/resources/templates/auth/loans.html
@@ -35,7 +35,7 @@
                         <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                             <thead>
                             <tr>
-                                <th>Identifiant</th>
+                                <th>Book number</th>
                                 <th>Title</th>
                                 <th>Author</th>
                                 <th>Language</th>
