update profile from webapp is OK

--- a/webapp/src/main/resources/templates/auth/profile.html
+++ b/webapp/src/main/resources/templates/auth/profile.html
@@ -49,14 +49,18 @@
                                 <td th:text="${client.getEmail()}"></td>
                                 <td>
                                     <div th:if="${client.isAlertEmail()}">
-                                        <form th:action="@{/profile}" method="post">
-                                            <input type="hidden" name="alertActive" th:value="${client.isAlertEmail()}" />
+                                        <form th:action="@{/alert-email}" method="post">
+                                            <input type="hidden" name="alertActive" th:value=false />
                                             <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
                                             <input type="checkbox" onChange="this.form.submit()" checked data-toggle="toggle">
                                         </form>
                                     </div>
                                     <div th:unless="${client.isAlertEmail()}">
-                                        <input type="checkbox" data-toggle="toggle">
+                                        <form th:action="@{/alert-email}" method="post">
+                                            <input type="hidden" name="alertActive" th:value=true />
+                                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+                                            <input type="checkbox" onChange="this.form.submit()" data-toggle="toggle">
+                                        </form>
                                     </div>
                                 </td>
                             </tr>
