--- a/webapp/src/main/resources/templates/fragments/nav.html
+++ b/webapp/src/main/resources/templates/fragments/nav.html
@@ -58,6 +58,9 @@
                 <li>
                     <a th:href="@{/loans}"><i class="fa fa-tasks fa-fw"></i> My Loans</a>
                 </li>
+                <li>
+                    <a th:href="@{/reservations}"><i class="fa fa-tasks fa-fw"></i> My reservations</a>
+                </li>
             </ul>
         </div>
         <!-- /.sidebar-collapse -->
