--- a/webapp/src/main/resources/templates/auth/reservations.html
+++ b/webapp/src/main/resources/templates/auth/reservations.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!--/*@thymesVar id="appName" type="String"*/-->
-    <title th:text="${'Books - ' + appName}"></title>
+    <title th:text="${'Reservations - ' + appName}"></title>
 </head>
 <header lang="en" th:replace="fragments/header :: header">
 </header>
@@ -19,7 +19,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">My loans </h1>
+                <h1 class="page-header">My Reservations </h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -28,60 +28,43 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Library of Liverpool
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                             <thead>
                             <tr>
-                                <th>Book number</th>
-                                <th>Title</th>
-                                <th>Author</th>
-                                <th>Language</th>
+                                <th>Reservation number</th>
+                                <th>Created date *</th>
                                 <th>State</th>
-                                <th>Renewed</th>
-                                <th>Start</th>
-                                <th>Until</th>
-                                <th>Returning the book</th>
+                                <th>Book</th>
+                                <th>Waiting list max</th>
+                                <th>Cancel the reservation</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <!--/*@thymesVar id="book" type="library.io.github.walterwhites.Book"*/-->
+                            <!--/*@thymesVar id="r" type="library.io.github.walterwhites.loans.Reservation"*/-->
+                            <!--/*@thymesVar id="all_reservations" type="library.io.github.walterwhites.loans.GetAllReservationFromClientResponse"*/-->
                             <tr class="odd gradeX"
-                                th:each="book, iStat : ${books_client.getBook()}"
+                                th:each="r, iStat : ${all_reservations.getReservation()}"
                                 th:alt-title="${iStat.even}? 'even' : 'odd'">
-                                <td th:text="${book.getLoans().getId()}"></td>
-                                <td th:text="${book.getTitle()}"></td>
-                                <td th:text="${book.getAuthor()}"></td>
-                                <td th:text="${book.getLanguages()}"></td>
-                                <td th:text="${book.getLoans().getState()}"></td>
-                                <td th:text="${book.getLoans().isRenewed()}"></td>
-                                <td th:text="|${book.getLoans().getStartDate().getDay()}/${book.getLoans().getStartDate().getMonth()}/${book.getLoans().getStartDate().getYear()}|"></td>
-                                <td th:text="|${book.getLoans().getEndDate().getDay()}/${book.getLoans().getEndDate().getMonth()}/${book.getLoans().getEndDate().getYear()}|"></td>
-                                <div th:if="${!book.getLoans().getState().toString().equals('BORROWED')}">
+                                <td th:text="${r.getId()}"></td>
+                                <td th:text="|${r.getCreatedDate().getDay()}/${r.getCreatedDate().getMonth()}/${r.getCreatedDate().getYear()}|"></td>
+                                <td th:text="${r.getState()}"></td>
+                                <td th:text="${r.getBookTitle()}"></td>
+                                <td th:text="${r.getMaxNumber()}"></td>
+                                <div th:if="${r.getState().toString().equals('pending')}">
                                     <th>
-                                        <button class="btn btn-default" type="submit" disabled>You have already returned this book</button>
+                                        <form th:action="@{/cancel-reservation}" method="post">
+                                            <input type="hidden" name="id" th:value="${r.getId()}" />
+                                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+                                            <button class="btn btn-danger" type="submit">Cancel reservation</button>
+                                        </form>
                                     </th>
                                 </div>
-                                <div th:unless="${!book.getLoans().getState().toString().equals('BORROWED')}">
+                                <div th:unless="${r.getState().toString().equals('pending')}">
                                     <th>
-                                        <div th:if="${!book.getLoans().isRenewed() && book.getLoans().getEndDate().toGregorianCalendar().getTime()
-                                        .after(#dates.createNow())}">
-                                                <form th:action="@{/renewed-book}" method="post">
-                                                    <input type="hidden" name="id" th:value="${book.getLoans().getId()}" />
-                                                    <input type="hidden" name="title" th:value="${book.getTitle()}" />
-                                                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
-                                                    <button class="btn btn-warning" type="submit">Renewed this book</button>
-                                                </form>
-                                            <br>
-                                        </div>
-                                        <form th:action="@{/return-book}" method="post">
-                                            <input type="hidden" name="id" th:value="${book.getLoans().getId()}" />
-                                            <input type="hidden" name="title" th:value="${book.getTitle()}" />
-                                            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
-                                            <button class="btn btn-success" type="submit">Return this book</button>
-                                        </form>
+                                        <button class="btn btn-default" type="submit" disabled>This reservation is already archived</button>
                                     </th>
                                 </div>
                             </tr>
@@ -89,7 +72,7 @@
                             </tbody>
                         </table>
                         <div>
-                            *Renewed a book: A book can only be renewed one time
+                            *Reservation of a book: A reservation is available 48 hours after the notification by email
                         </div>
                     </div>
                     <!-- /.panel-body -->
